udbc/cart-deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: carts
  namespace: udbc
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 4
  paused: false
  replicas: 1
  minReadySeconds: 20
  selector:
    matchLabels:
      role: carts
    matchExpressions:
      - {key: version, operator: In, values: [v1, v2, v3]}
  template:
    metadata:
      name: cart
      labels:
        app: go
        role: carts
        version: v1
    spec:
      containers:
        - name: carts
          image: bgops/cart:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
         # restartPolicy: Always
