udbc/catalogue-deploy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: catalogue
  namespace: udbc
  labels:
    app: catalogue
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
        env: dev
    spec:
      containers:
        - name: catalogue
          image: bgops/catalogue:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
