udbc/cart-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: udbc
  labels:
    role: carts
spec:
 selector:
   role: carts
 ports:
   - port: 80
     protocol: TCP
