udbc/catalogue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: udbc
  labels:
    app: catalogue
    env: dev
spec:
 selector:
   app: catalogue
 ports:
   - port: 80
     protocol: TCP
