udbc/cataloguedb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  namespace: udbc
spec:
  selector:
    app: catalogue-db
  ports:
    - protocol: TCP
      port: 3306
